fixing color contrast errors

--- a/webroot/sites/all/themes/dotgov/css/dotgov.css
+++ b/webroot/sites/all/themes/dotgov/css/dotgov.css
@@ -266,10 +266,10 @@ body {
 	background-color: #000;
 }
 .label[data-format="Compliant with M-15-13 and BOD 18-01"], .label[data-format*="Compliant with M-15-13 and BOD 18-01"] {
-	background-color: #988205;
+	background-color: #5d4f03;
 }
 .label[data-format="Free of RC4/3DES and SSLv2/SSLv3"], .label[data-format*="Free of RC4/3DES and SSLv2/SSLv3"] {
-	background-color: #988205;
+	background-color: #5d4f03;
 }
 
 .not-logged-in.page-user .main-container {
